[tool.poetry]
name = "music-recommender-project"
version = "0.1.0"
description = ""
authors = ["Lcs-ns <lucas.nas314@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
surprise = "^0.1"
streamlit = "^1.42.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
